docs/v1.4.5/zh/api/campaign/TradeAgreementsCampaignBehavior.md
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `TradeAgreementsCampaignBehavior`
- [← 本领域 / 返回 campaign](./)
- [↑ API 目录](../)
- [🏠 首页 v1.4.5](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# TradeAgreementsCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class TradeAgreementsCampaignBehavior : CampaignBehaviorBase, ITradeAgreementsCampaignBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `Bannerlord.Source/bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/TradeAgreementsCampaignBehavior.cs`

## 概述

`TradeAgreementsCampaignBehavior` 位于 `TaleWorlds.CampaignSystem.CampaignBehaviors`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.CampaignBehaviors` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### AddGainedGoldToKingdom
`public TradeAgreement AddGainedGoldToKingdom(Kingdom kingdom, int gold)`

**用途 / Purpose:** 向当前集合/状态中添加 `gained gold to kingdom`。

### OnGoldSharedInKingdom
`public TradeAgreement OnGoldSharedInKingdom(Kingdom kingdom, int gold)`

**用途 / Purpose:** 当 `gold shared in kingdom` 事件触发时调用此方法。

### AutoGeneratedStaticCollectObjectsTradeAgreement
`public static void AutoGeneratedStaticCollectObjectsTradeAgreement(object o, List<object> collectedObjects)`

**用途 / Purpose:** 处理 `auto generated static collect objects trade agreement` 相关逻辑。

### RegisterEvents
`public override void RegisterEvents()`

**用途 / Purpose:** 处理 `register events` 相关逻辑。

### OnTradeAgreementOfferedToPlayer
`public void OnTradeAgreementOfferedToPlayer(Kingdom fromKingdom)`

**用途 / Purpose:** 当 `trade agreement offered to player` 事件触发时调用此方法。

### SyncData
`public override void SyncData(IDataStore dataStore)`

**用途 / Purpose:** 处理 `sync data` 相关逻辑。

### MakeTradeAgreement
`public void MakeTradeAgreement(Kingdom kingdom1, Kingdom kingdom2, CampaignTime duration)`

**用途 / Purpose:** 处理 `make trade agreement` 相关逻辑。

### EndTradeAgreementsOfKingdom
`public void EndTradeAgreementsOfKingdom(Kingdom kingdom)`

**用途 / Purpose:** 处理 `end trade agreements of kingdom` 相关逻辑。

### EndTradeAgreement
`public void EndTradeAgreement(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** 处理 `end trade agreement` 相关逻辑。

### HasTradeAgreement
`public bool HasTradeAgreement(Kingdom kingdom1, Kingdom kingdom2, out TradeAgreement tradeAgreement)`

**用途 / Purpose:** 判断当前对象是否包含/拥有 `trade agreement`。

### GetTradeAgreementEndDate
`public CampaignTime GetTradeAgreementEndDate(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** 获取 `trade agreement end date` 的当前值。

### OnTradeGoldDistributedInKingdom
`public void OnTradeGoldDistributedInKingdom(Kingdom kingdom1, Kingdom kingdom2, Clan clan, int share)`

**用途 / Purpose:** 当 `trade gold distributed in kingdom` 事件触发时调用此方法。

## 使用示例

```csharp
var value = new TradeAgreementsCampaignBehavior();
value.AddGainedGoldToKingdom(kingdom, 0);
```

## 参见

- [完整类目录](../catalog)